Fix line wrapping and refactor color vars

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,6 +34,7 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
+  --color-highlight: rgb(38, 126, 185)
 }
 
 @media (prefers-color-scheme: dark) {
