--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,7 @@ a,
 .green {
   text-decoration: none;
   /* color: hsla(160, 100%, 37%, 1); */
-  color: rgb(38, 126, 185);
+  color: var(--color-highlight);
   transition: 0.4s;
 }
 
@@ -20,7 +20,7 @@ a,
   a:hover {
     background-color: hsla(212, 100%, 37%, 0.2);
     text-decoration: underline;
-    text-decoration-color: rgb(38, 126, 185);
+    /* text-decoration-color: var(--color-highlight); */
   }
 }
 
